--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         h1{
-            background-color: aqua;
+            background-color: red;
             text-align: center;
         }
     </style>
